Bug 1490537 - init and shutdown Skia in the GPU process. r=mattwoodrow